WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73870
AX: WK2: AX hierarchy is not restored after web process crash
https://bugs.webkit.org/show_bug.cgi?id=73870
Summary
AX: WK2: AX hierarchy is not restored after web process crash
chris fleizach
Reported
2011-12-05 15:25:51 PST
-Goto m.southwest.com -Goto "Air Reservation" -Goto "Book Air" -Search for a flight Navigate between pages. RESULTS -We get notification for "detached" elements. For example when a new page loads we get a load complete notification, The webArea has a parent of the scrollarea, which has an AXGroup parent, which has a nil parent.
Attachments
patch
(3.63 KB, patch)
2011-12-05 15:28 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-12-05 15:26:20 PST
<
rdar://problem/10429593
>
chris fleizach
Comment 2
2011-12-05 15:28:19 PST
Created
attachment 117948
[details]
patch
chris fleizach
Comment 3
2011-12-05 15:35:01 PST
http://trac.webkit.org/changeset/102053
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug