AX: WK2: AX hierarchy is not restored after web process crash https://bugs.webkit.org/show_bug.cgi?id=73870

The accessibility tokens that need to be sent between UI and Web process
were not being sent by the UI process -> the web process when the web
process crashed.

Reviewed by Darin Adler.

* UIProcess/API/mac/WKView.mm:
(-[WKView viewDidMoveToWindow]):
(-[WKView _accessibilityRegisterUIProcessTokens]):
(-[WKView _didRelaunchProcess]):



Canonical link: https://commits.webkit.org/90508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102053 268f45cc-cd09-0410-ab3c-d52691b4dbfc